# llming-lodge

./: .env.example  .gitignore  CLA.md  CLAUDE.md  LICENSE  LICENSE_COMMERCIAL.md  Makefile  NOTICE  README.md  pyproject.toml
docs/: bolts.md  browser-mcp.md  document-plugins.md  remote-api.md
llming_lodge/: __init__.py  app_extensions.py  celebrations.py  chat_config.py  chat_controller.py  chat_page.py  chat_preset.py  constants.py  llm_base_client.py  llm_provider_manager.py  nudge_store.py  server.py  session.py  speech_service.py  standalone.py  system_nudges.py
llming_lodge/api/: __init__.py  ai_edit_handler.py  chat_session_api.py  commands.py  debug_api.py  dev_dashboard.py  public_api.py  writing_styles.py
llming_lodge/budget/: __init__.py  budget_limit.py  budget_manager.py  budget_types.py  mongodb_budget_limit.py
llming_lodge/config/: __init__.py  llm_global_config.py  llm_user_config.py  model_categories.py
llming_lodge/dev/: __init__.py  dev_commands.py  dev_mcp.py  remote_mode.py
llming_lodge/doc_plugins/: __init__.py  creator_mcp.py  document_store.py  email_mcp.py  html_exporter.py  html_mcp.py  manager.py  plotly_mcp.py  pptx_exporter.py  presentation_mcp.py  render.py  table_exporter.py  table_mcp.py  text_doc_mcp.py  word_exporter.py
llming_lodge/documents/: __init__.py  docx.py  extract.py  image_registry.py  pdf.py  pdf_viewer_mcp.py  upload_manager.py  xlsx.py
llming_lodge/i18n/: __init__.py
llming_lodge/i18n/translations/: de-de.json  de-swg.json  en-in.json  en-us.json  es-es.json  fr-fr.json  hi-in.json  it-it.json  nl-nl.json  zh-cn.json
llming_lodge/monitoring/: heartbeat.py
llming_lodge/prompt/: prompt_template.py
llming_lodge/providers/: __init__.py  generic_openai_provider.py  openai_compat_client.py
llming_lodge/providers/anthropic/: anthropic_client.py  anthropic_models.py  anthropic_provider.py
llming_lodge/providers/azure_openai/: azure_openai_provider.py
llming_lodge/providers/google/: google_client.py  google_models.py  google_provider.py
llming_lodge/providers/mistral/: mistral_provider.py
llming_lodge/providers/openai/: openai_client.py  openai_models.py  openai_provider.py
llming_lodge/services/: __init__.py  directory_service.py  email_service.py
llming_lodge/tools/: __init__.py  builtin_tools.py  gemini_image.py  math_mcp.py  tool_definition.py  tool_registry.py  toolbox_adapter.py
llming_lodge/user_tools/: __init__.py  user_tool.py  user_tool_config.py
llming_lodge/utils/: __init__.py  html_stream_translator.py  image_utils.py  markdown_postprocessor.py
samples/chat/: app.py
scripts/: prepare_readme.py
tests/: __init__.py  conftest.py  test_azure_claude.py  test_budget.py  test_budget_tracking.py  test_caching.py  test_caching_integration.py  test_doc_render.py  test_embed_integration.py  test_embed_prompting.py  test_gemini_image.py  test_image_gen_azure.py  test_image_history.py  test_image_support.py  test_intervals.py  test_manager.py  test_markdown_postprocessor.py  test_math_mcp.py  test_mcp_config_integration.py  test_mcp_server.py  test_memory.py  test_mongodb_budget_limit.py  test_mongodb_budget_limit_logging.py  test_openai_client.py  test_openai_provider_options.py  test_prompt_template.py  test_reasoning_config.py  test_regression.py  test_session.py  test_session_budget_calls.py  test_speech_service.py  test_tool_autocontinue.py  test_tool_config.py  test_tool_provider_compat.py
tests/fixtures/: voice-test-german.webm
(+55 files in other folders)
